# connectify

./: README.md
.github/workflows/: tests.yml
backend/: .dockerignore  .gitignore  README.md  celery_beat_start.sh  celery_start.sh  docker-compose.yml  pyproject.toml  pytest.sh  pytest_cov.sh  schema.yml
backend/deploy/: Dockerfile
backend/src/: conftest.py
backend/src/api/: serializers.py  urls.py  views.py
backend/src/api/tests/: factories.py  groups_tests.py  meetings_tests.py  users_tests.py
backend/src/chat/: consumers.py  models.py  routing.py  serializers.py  urls.py  views.py
backend/src/chat/migrations/: 0001_initial.py
backend/src/main/: asgi.py  celery.py  settings.py  urls.py
backend/src/web/: enums.py  models.py  services.py  sevices.py  tasks.py
backend/src/web/migrations/: 0001_initial.py  0002_alter_groupparticipant_group.py  0002_alter_groupparticipant_user.py  0002_alter_user_birthday_alter_user_city_and_more.py  0003_alter_group_categories_alter_user_groups_and_more.py  0003_remove_user_first_name_remove_user_last_name_and_more.py  0004_remove_user_phone.py
backend/src/web/templates/emails/: group_delete_email.html  meeting_create_email.html  meeting_delete_email.html  meeting_notify_email.html
frontend/: README.md  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  main.js
frontend/src/assets/: base.css  main.css
frontend/src/components/: HeaderOnlyWithTitle.vue  MeetingCard.vue
frontend/src/containers/: GroupInfo.vue  GroupMeetings.vue  MeetingInfo.vue  MeetingListInHome.vue  Navbar.vue  (+2 more)
(+51 files in other folders)
