[tool.poetry]
name = "connectify"
version = "0.1.0"
description = ""
authors = ["DashaVed <dasha.ved93@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2"
psycopg2-binary = "^2.9.6"
djangorestframework = "^3.14.0"
markdown = "^3.4.3"
django-filter = "^23.1"
django-cors-headers = "^3.14.0"
pillow = "^9.5.0"
djoser = "^2.2.0"
djangorestframework-simplejwt = "^5.2.2"
drf-spectacular = "^0.26.2"
pytest = "^7.3.1"
pytest-django = "^4.5.2"
pytest-cov = "^4.0.0"
factory-boy = "^3.2.1"
celery = "^5.2.7"
redis = "^4.5.5"


[build-system]
requires = ["poe￼
￼
￼
￼
try-core"]
build-backend = "poetry.core.masonry.api"
